samples/_failures_safe/1761558408_8fe7cf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_018bffd7.c: In function ‘main’:
./samples/SAFE/__tmp_018bffd7.c:153:17: error: expected expression at end of input
  153 |                 } else if (status == -1)
      |                 ^
./samples/SAFE/__tmp_018bffd7.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_018bffd7.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_018bffd7.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_018bffd7.c:153:17: error: expected declaration or statement at end of input
